--- a/src/css/TODO
+++ b/src/css/TODO
@@ -1,5 +1,27 @@
 TODO list for CSS:
 
+Immediate:
+
+- 2 prompts at start: why?
+
+- fpe test
+
+- rationalize the debugging functions, make like gdb
+
+- suppress redundant { } block within a IF_TRUE or IF_FALSE block: just replace code in upper
+  with code in lower.  CleanDoubleBlock is written: need to figure out when to call it!
+  seems like we need a post-processing optimization step..
+
+- run optimizer!: clearly addframe and addprog are big.
+
+- top propagation etc should be unnec.  everything should be in space!
+  - flag to warn, but keep functionality just in case.
+
+- integrate with programs
+
+-----------------------
+Longer-term:
+
 - has a problem with: var-num types of exprs -- gobbles the - into the
 num, sees var num (need to fix parser somehow)
 
