program call path fixed w/ GetTarget() call; xor proj updated; css debugging more like gdb.  various console fixes.

--- a/src/css/TODO
+++ b/src/css/TODO
@@ -2,13 +2,11 @@ TODO list for CSS:
 
 Immediate:
 
-- Breakpoints at pc = 0 don't work: why??
+- filename completion in qconsole
 
-- 2 prompts at start: why?
+- fpe test: why does it keep going!?
 
-- fpe test
-
-- rationalize the debugging functions, make like gdb
+- gdbify: breakpoint setting and clearing
 
 - suppress redundant { } block within a IF_TRUE or IF_FALSE block: just replace code in upper
   with code in lower.  CleanDoubleBlock is written: need to figure out when to call it!
@@ -18,8 +16,6 @@ Immediate:
 
 - top propagation etc should be unnec.  everything should be in space!
   - flag to warn, but keep functionality just in case.
-
-- integrate with programs
 
 -----------------------
 Longer-term:
