misc program/css updates: now using cptr_variant types for program vars.  renamed prog_params to args and prog_vars to vars -- this stuff should be simple and easy to parse.  enums are not working as desired, and if(network != NULL) .. doesn't work -- otherwise variants are looking pretty good.

--- a/src/css/TODO
+++ b/src/css/TODO
@@ -1,5 +1,15 @@
 TODO list for CSS:
 
+------------------
+Program todo:
+
+- add quit confirm prompt taChoice
+- prog_args -> args
+- new variant assign that preserves target type
+- convert enums to c_ptr_enum
+- fix CPtr_String cvt to bool/enum!
+
+------------------
 Immediate:
 
 - suppress redundant { } block within a IF_TRUE or IF_FALSE block: just replace code in upper
