got leabra settling stopping criteria working; added IfContinue and IfBreak progel's fixed c_float and various other c_ptr_type css guys which were not working properly after big css updates of a while ago.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,9 +1,8 @@
 leabra todo list:
 
+* redo unitspec sse to use act_m!
 * fix hardclamp bug
-* max_da -> maxda
 * update context info from program to net
-* move maxda params to unitspec
 * add network updating progel
 * deal with sequences
 * deal with small-batch weight updates
