--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -8,9 +8,10 @@ leabra todo list:
   by DataUpdate guys, etc
 
 * add CheckNetwork (from process code in 3.2)
+* do UserScript::ImportFromFile (how to just read in raw?  get something?)
 
 * deal with sequences
 * deal with small-batch weight updates
-* deal with dmem
+* deal with dmem: network counters aggregate across epoch.. others..
 
 * add #CAT to everything in netstru and leabra.h, and fixup comments
