--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,20 +1,13 @@
 leabra todo list:
 
-* net monitor not reliable -- sometimes works, sometimes doesn't.  add CheckConfig
- -- names in val_specs should come from parent object..  don't mod based on var name either
--- #NO_BROWSE on val_specs either
-
-* layerwriter trial_name and group_name not reliable either..
 * not reading ktwa specs properly from v3
 
-* indicate in proglib name if it is a group or just one guy: LeabraAll_Std, etc..
-* fix names: Grouped -> GpData
+---
 
------
+* datatable aggregation
 
 * create MathFuns library with all kinds of math-related things in it, incl lots of #CAT
 docs..
-
 
 * deal with small-batch weight updates
 * deal with dmem: network counters aggregate across epoch.. rndseed aggregate, etc
