minor fix to selectedit conversion.  ps. select edit fields don't seem to work..

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,6 +2,10 @@ leabra todo list:
 
 * not reading ktwa specs properly from v3
 
+* add selectedit copy update for project copy..
+
+* something funky about converted networks.. save & rebuild works but initial one does not..
+
 ---
 
 * datatable aggregation
