got rid of v3.2 defaults for leabra and bp.  still in project.. intermediate checkin just in case we need to restore defaults for some other reason.  nuking now..

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,5 +1,8 @@
 leabra todo list:
 
+* programs: add epoch-level monitor, rename data as TrialMonitor and EpochMonitor
+* wizards: reactivate env making stuff -- makes life easier -- and simple procs??
+
 * not reading ktwa specs properly from v3
 
 * add selectedit copy update for project copy..
