added auto network z position scaling, other minor fixes.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -7,6 +7,12 @@ docs..: add all float_RArray funs, for matricies.
 
 * extrew in trial monitor seems not to be working: 12ax demo
 
+* add highvis projections to leabra
+
+* convert Highvis env -> ScriptEnv
+
+* add "print" Progel
+
 -------
 
 * profile: slow!!! -- probably all the uae's triggering cascade of datachanged stuff..
