split-up leabra into sep files; vec ops in taMath from float_RArray (except histogram -- needs work).  doc'd taMatrix;  todo: move datatable.cpp stuff to v3_compat!

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -7,11 +7,9 @@ docs..: add all float_RArray funs, for matricies.
 
 * extrew in trial monitor seems not to be working: 12ax demo
 
-* add highvis projections to leabra
-
-* convert Highvis env -> ScriptEnv
-
 * add "print" Progel
+
+* encase programs in struct update brackets to prevent updating
 
 -------
 
