--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -1,5 +1,7 @@
 leabra todo list:
 
+* datatable: findmakecol: detect if transitioning from a matrix to a non-matirx..
+
 * taImageProc class w/ highvis stuff:
   - make basic directory filename datatable thing (in taDataProc; with filter..)
     - GetMakeCol on fname -- allows other fields
