attempts to speed things up based on profile results.  got rid of auto UAE calls in css -- user just has to call update if they want it, also spurious checkconfig from CallProgram::GetTarget.  plus some doc updates to base header files.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -8,6 +8,8 @@ leabra todo list:
      applyinputs reads filename and calls fun..
   - import network and run it!!
 
+* need better Random functions for getting full range of stuff -- there already??
+
 * create MathFuns library with all kinds of math-related things in it, incl lots of #CAT
 docs..: add all float_RArray funs, for matricies.
 
